<resources>
    <string name="app_name">quizandroid</string>
    <string name="main_tittle">BERITA MAYA</string>
    <string name="read_more">Baca Selengkapnya >></string>
    <string name="date">Jum'at , 5 Oktober 2018</string>
    <string name="tittle_1">Diduga Mabuk Tembakau Gorila, Pelajar Tabrak Trotoar.</string>
    <string name="tittle_2">Teler Akibat Narkoba, 2 Polisi Tabrak Warga Pekanbaru hingga Tewas.</string>
    <string name="tittle_3">Positif sabu, pengemudi mobil tabrak pemotor di Surabaya.</string>
    <string name="tittle_4">Gunakan ekstasi, Afriyani tabrak 9 orang di Tugu Tani</string>
</resources>
