<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Berita2">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="304dp"
        android:layout_height="53dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/tittle_2"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/main_tittle"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="315dp"
        android:layout_height="165dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/pict2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/date"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:text="Teler Akibat Narkoba, 2 Polisi Tabrak Warga Pekanbaru hingga Tewas. Dua orang polisi, diduga tengah teler akibat pengaruh narkoba, menabrak seorang warga Pekanbaru, Firman Berlando, hingga tewas. Dua polisi itu anggota Satuan Reserse Narkotika dan Obat-Obatan Terlarang Kepolisian Kampar, Riau.  Mobil yang menabrak dikendarai oleh anggota polisi Brigadir AP. Di dalam mobil tersebut juga ada satu lagi polisi, yakni Bripda RHJ serta seorang wanita DP. Laka lantas itu terjadi antara mobil Toyota Avanza yang dikendarai oknum polisi dan  Suzuki Shogun yang dikendarai korban di Jalan Prambanan, Pekanbaru, pada Minggu (27/8). Saat itu Firman Bernaldo (50) sedang membonceng istrinya Basaria Manik (42), dan anak laki-lakinya GF (3). Diduga pengemudi Toyota Avanza pada saat mendahului sepeda motor tidak konsentrasi dan tidak memperhatikan jarak dengan kendaraan yang ada didepannya. Dua oknum polisi yang bertugas di Polres Kampar itu kini diproses hukum di Propam Polda Riau karena hasil tes urine keduanya positif narkoba jenis inex."
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />
</android.support.constraint.ConstraintLayout>